[project]
name = "d7a"
description = "Python Dash7 ALP library"
authors = [
    { name = "Glenn Ergeerts", email = "glenn.ergeerts@aloxy.io" },
    { name = "Liam Oorts", email = "liam.oorts@aloxy.io" },
    { name = "Kwinten Schram", email = "kwinten.schram@aloxy.io" },
    { name = "Dirk Van Haerenborgh", email = "dirk.vanhaerenborgh@aloxy.io" },
    { name = "Bart Jonkers", email = "bart.jonkers@aloxy.io" },
    { name = "Jolanta Tadla", email = "jolanta.tadla@aloxy.io" },
]
requires-python = ">=3.8,<4.0"
dependencies = [
    "bitstring>=4.1.4,<5.0.0",
    "cerberus>=1.3.5,<2.0.0",
    "jsonpickle>=3.0,<4.0",
    "crcmod>=1.7,<2.0",
]
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
package-type = "library"

[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
dev = [
    "pytest<7.5,>=7.4.3",
    "pytest<8.0.0,>=7.4.3",
    "unittest2<2.0.0,>=1.1.0",
    "coverage<8.0.0,>=7.3.3",
    "Flake8-pyproject>=1.2.3",
]
examples = [
    "pyserial<4.0.0,>=3.5.0",
    "traceback2<2.0.0,>=1.4.0",
    "paho-mqtt<2.0.0,>=1.6.1",
]

[tool.pdm.scripts]
test = "pytest --junitxml=unittest-result.xml"
lint = "flake8 ."

[tool.flake8]
max-line-length = 160
